Fix Sidebar overflow-y

--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -40,6 +40,8 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 
   &__nav {
@@ -116,7 +118,7 @@
 
     &--indented {
       padding-left: 32px;
-      width: calc(100% - 100px);
+      //width: calc(100% - 100px);
     }
   }
 
@@ -161,7 +163,6 @@
 
   &__submenu-toggle {
     position: relative;
-    width: 100%;
 
     &--expanded {
       background-color: #F9FAFB;
